# cpp-labs

./: .gitignore  Object.cpp  Object.h  README.md  main.cpp
laba1/: .gitignore  CMakeLists.txt  Object.cpp  README.md
laba1/src/: Object.cpp  main.cpp
laba2/: CMakeLists.txt  README.md
laba2/include/: Functions.h  Matrix.h
laba2/src/: Functions.cpp  Matrix.cpp  main.cpp
laba3/: CMakeLists.txt  README.md
laba3/include/: Fakultet.h  Menu.h  Student.h
laba3/src/: Fakultet.cpp  Menu.cpp  Student.cpp  main.cpp
