cmake_minimum_required(VERSION 3.28)
project(laba3)

set(CMAKE_CXX_STANDARD 20)

add_executable(laba3 src/main.cpp
        src/Fakultet.cpp
        include/Fakultet.h
        src/main.cpp
        src/Fakultet.cpp
        src/Student.cpp
        include/Student.h
        include/Student.h
        src/main.cpp)
